# teemplate

./: .gitignore  pyproject.toml
src/application/seedwork/: command.py  query.py
src/application/seedwork/common/: exceptions.py
src/application/seedwork/common/ports/: event_bus.py  snapshot_store.py  transactional_manager.py
src/application/seedwork/common/ports/event_store/: __init__.py  event_metadata.py  interface.py  stored_event.py
src/application/seedwork/common/ports/log_store/: __init__.py  interface.py  stored_log.py
src/application/seedwork/common/ports/reader/: interface.py  read_models.py
src/domain/seedwork/: entity.py  event.py  exception.py  mixins.py
src/domain/seedwork/aggregate/: common.py  es.py
src/domain/seedwork/aggregate/es/: base.py  exceptions.py  snapshot.py
src/domain/seedwork/business_rules/: exception.py  rules.py
src/domain/seedwork/ports/: id_generator.py
src/domain/seedwork/repository/: common.py  es.py
src/domain/seedwork/value_objects/: exception.py  value.py
src/infra/seedwork/: exception.py
src/infra/seedwork/adapters/: event_bus.py
src/infra/seedwork/adapters/event_bus/: impl.py
src/infra/seedwork/adapters/inbox_outbox/: message.py
src/infra/seedwork/adapters/log/: constants.py
src/infra/seedwork/adapters/message_broker/: impl.py  integration_event.py  interface.py  message.py
src/infra/seedwork/adapters/transactional_manager/: exceptions.py  impl.py
src/infra/seedwork/db/convertors/: inbox.py  outbox.py
src/infra/seedwork/db/models/: base.py  inbox.py  outbox.py
(+8 files in other folders)
