[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b11",
    "faststream>=0.6.3",
    "msgspec>=0.19.0",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "uuid-utils>=0.11.1",
]
